bug: fixed the text overflow problem in button

--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,8 @@ body{
     font-family: 'Lobster', cursive;
     font-size: 1rem;
     border-radius: 0.5rem ;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 h2{
